--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
 			  crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css">
 </head>
 <body>
 	<div data-role="header" data-position="fixed">
