Added test content to panel

--- a/index.htm
+++ b/index.htm
@@ -13,8 +13,8 @@
 </head>
 <body>
 	<div data-role="page" class="ui-responsive-panel">
-		<div data-role="panel" id="menupanel">
-			<!-- panel content goes here -->
+		<div data-role="panel" id="nav-panel">
+			<p>Lorem ipsum</p>
 		</div><!-- /panel -->
 		<div data-role="header" data-position="fixed">
 		<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
