Playing with jQuery mobile

--- a/index.htm
+++ b/index.htm
@@ -12,14 +12,29 @@
 	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css">
 </head>
 <body>
-	<div data-role="page" class="ui-responsive-panel">
+	<div data-role="page" class="ui-responsive-panel" id="home">
 		<div data-role="panel" id="nav-panel">
-			<p>Lorem ipsum</p>
+			<ul data-role="listview">
+			<li data-icon="delete"><a href="#" data-rel="close">Close menu</a></li>
+			<li data-icon="home"><a href="#home">Home</a></li>
+			<li data-icon="gear"><a href="#settings">Settings</a></li>
+			</ul>
 		</div><!-- /panel -->
 		<div data-role="header" data-position="fixed">
-		<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
-        <!--<a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>-->
-		<h1>Welding Visualizer</h1>
+			<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+	        <!--<a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>-->
+			<h1>Welding Visualizer</h1>
+		</div>
+		<div data-role="ui-content">
+			<span>Content goes here</span>
+		</div>
+	</div>
+	<div data-role="page" id="settings">
+		<div data-role="header" data-position="fixed">
+			<h1>Settings</h1>
+		</div>
+		<div data-role="ui-content">
+			<span>Settings go here</span>
 		</div>
 	</div>
 </body>
