Added link to GitHub

--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,8 @@
 			<!--
 			<a id="btn-back" href="<?php echo $_SERVER['HTTP_REFERER'];?>" data-icon="back" data-rel="back">Back</a>-->
 
-			<h1>Welding Visualizer</h1>
+			<h1>Welding Visualizer</h1>			
+			<a href="https://github.com/heimmat/welding-visualizer" data-icon="eye" class="ui-btn-right">View Code on GitHub</a>
 		</div>
 		<div data-role="content">
 			<div id="graph-area" class="ui-block-a">
