Added a graph prototype with sample data

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
 			  crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script src="prototype.js"></script>
 </head>
 <body>
 	<div data-role="page" class="ui-responsive-panel" id="home">
@@ -34,11 +35,11 @@
 		<div data-role="content">
 			<div id="graph-area" class="ui-block-a">
 				<h2>Graph-Area</h2>
-				<svg width="100%" height="100%">
+				<svg>
 
 				</svg>
 			</div>
-			<div id="mgmt-area" class="ui-block-b" style="background-color: red; height: 150px;">
+			<div id="mgmt-area" class="ui-block-b">
 				<h2>Graph-Management</h2>
 			</div>
 		</div>
