--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,8 @@
 			  crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="prototype.js"></script>
+	<!--<script src="prototype.js"></script>-->
+	<script src="customui.js"></script>
 </head>
 <body>
 	<div data-role="page" class="ui-responsive-panel" id="home">
@@ -30,10 +31,10 @@
 			<div id="mgmt-area" class="ui-block-b">
 				<h2>Graph-Management</h2>
 				<label for="xAxis-select">X-Achse</label>
-				<select id="xAxis-select">
+				<select id="xAxis-select" class="axis-select">
 				</select>
 				<label for="yAxis-select">Y-Achse</label>
-				<select id="yAxis-select">
+				<select id="yAxis-select" class="axis-select">
 				</select>
 			</div>
 		</div>
