--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<!--<script src="prototype.js"></script>-->
+	<script src="serverapi.js"></script>
 	<script src="customui.js"></script>
 </head>
 <body>
