Reformat index.htm

--- a/index.htm
+++ b/index.htm
@@ -30,17 +30,33 @@
 				</svg>
 			</div>
 			<div id="mgmt-area" class="ui-block-b">
-				<h2>Graph-Management</h2>
+				<!--<h2>Graph-Management</h2>
 				<label for="xAxis-select">X-Achse</label>
 				<select id="xAxis-select" class="axis-select">
 				</select>
 				<label for="yAxis-select">Y-Achse</label>
 				<select id="yAxis-select" class="axis-select">
-				</select>
+				</select>-->
 			</div>
 		</div>
 		<div data-role="footer" data-position="fixed">
 			<h1>Ein Projekt der Fachhochschule Südwestfalen Meschede im Fach IT-Systeme und IT-Projekte</h1>
+		</div>
+	</div>
+	<div data-role="page" data-rel="dialog" data-transition="popup" id="axes-mgmt">
+		<div data-role="header">
+			<h1>Achsen auswählen</h1>
+		</div>
+		<div class="ui-content">
+			<label for="xAxis-select">X-Achse</label>
+			<select id="xAxis-select" class="axis-select">
+			</select>
+			<label for="yAxis-select">Y-Achse</label>
+			<select id="yAxis-select" class="axis-select">
+			</select>
+			<a class="ui-btn ui-icon-back ui-btn-icon-left" href="#home" data-direction="reverse" >
+		</div>
+		<div data-role="footer">
 		</div>
 	</div>
 </body>
