--- a/index.htm
+++ b/index.htm
@@ -37,13 +37,14 @@
 				<label for="yAxis-select">Y-Achse</label>
 				<select id="yAxis-select" class="axis-select">
 				</select>-->
+				<a class="ui-btn" data-transition="pop" href="#axes-mgmt">Achsen-Management</a>
 			</div>
 		</div>
 		<div data-role="footer" data-position="fixed">
 			<h1>Ein Projekt der Fachhochschule Südwestfalen Meschede im Fach IT-Systeme und IT-Projekte</h1>
 		</div>
 	</div>
-	<div data-role="page" data-rel="dialog" data-transition="popup" id="axes-mgmt">
+	<div data-role="page" data-rel="dialog" id="axes-mgmt">
 		<div data-role="header">
 			<h1>Achsen auswählen</h1>
 		</div>
