--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
 				<label for="yAxis-select">Y-Achse</label>
 				<select id="yAxis-select" class="axis-select">
 				</select>-->
-				<a class="ui-btn" data-rel="popup" href="#axes-mgmt">Achsen-Management</a>
+				<a class="ui-btn" data-rel="popup" data-position-to="window" data-transition="pop" href="#axes-mgmt">Achsen-Management</a>
 			</div>
 		</div>
 		<div data-role="footer" data-position="fixed">
