--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@
 			<h1>Ein Projekt der Fachhochschule Südwestfalen Meschede im Fach IT-Systeme und IT-Projekte</h1>
 		</div>
 	</div>
-	<div data-role="popup" id="axes-mgmt" class="ui-dialog">
+	<div data-role="popup" id="axes-mgmt">
 		<div data-role="header">
 			<h1>Achsen auswählen</h1>
 		</div>
