remove back button

--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
 			<label for="yAxis-select">Y-Achse</label>
 			<select id="yAxis-select" class="axis-select">
 			</select>
-			<a class="ui-btn ui-icon-back ui-btn-icon-left" href="#home" data-direction="reverse" >Zurück</a>
+			<!--<a class="ui-btn ui-icon-back ui-btn-icon-left" href="#home" data-direction="reverse" >Zurück</a>-->
 		</div>
 		<div data-role="footer">
 		</div>
