Add close button to axis mgmt

--- a/index.htm
+++ b/index.htm
@@ -39,6 +39,7 @@
 				</select>-->
 				<a class="ui-btn" data-rel="popup" data-position-to="window" data-transition="pop" href="#axes-mgmt">Achsen-Management</a>
 				<div data-role="popup" id="axes-mgmt" class="ui-content">
+					<a data-rel="back" class="ui-btn ui-btn-right ui-icon-delete ui-corner-all ui-shadow ui-btn-icon-notext">Close</a>
 					<label for="xAxis-select">X-Achse</label>
 					<select id="xAxis-select" class="axis-select">
 					</select>
