--- a/index.htm
+++ b/index.htm
@@ -30,13 +30,7 @@
 				</svg>
 			</div>
 			<div id="mgmt-area" class="ui-block-b">
-				<!--<h2>Graph-Management</h2>
-				<label for="xAxis-select">X-Achse</label>
-				<select id="xAxis-select" class="axis-select">
-				</select>
-				<label for="yAxis-select">Y-Achse</label>
-				<select id="yAxis-select" class="axis-select">
-				</select>-->
+				<h2>Management-Area</h2>
 				<a class="ui-btn" data-rel="popup" data-position-to="window" data-transition="pop" href="#axes-mgmt">Achsen-Management</a>
 				<div data-role="popup" id="axes-mgmt" class="ui-content">
 					<a data-rel="back" class="ui-btn ui-btn-right ui-icon-delete ui-corner-all ui-shadow ui-btn-icon-notext">Close</a>
@@ -46,7 +40,6 @@
 					<label for="yAxis-select">Y-Achse</label>
 					<select id="yAxis-select" class="axis-select">
 					</select>
-					<!--<a class="ui-btn ui-icon-back ui-btn-icon-left" href="#home" data-direction="reverse" >Zurück</a>-->
 				</div>
 			</div>
 		</div>
